<resources>
    <string name="app_name">Pathfindr</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_announcements">Announcements</string>
    <string name="title_ann_view">View Announcement</string>
    <string name="title_navigate_list">Navigate - Select Destination</string>
    <string name="title_navigate">Navigate</string>
    <string name="title_location_info">Location Info</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Button Labels -->
    <string name="button_open">Open</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_employee_title">Employee Settings</string>
    <string name="title_help">Help</string>
    <string name="title_location_view">Location View</string>
    <string name="button_info">Info</string>
    <string name="button_nav">Navigate</string>
    <string name="nav_prep_body">"Please read carefully.\nYou must press 'Next' ONLY once you are within 3 metres of a designated location that is listed in the Location Info page.
Trying to start navigation while not at a designated location will not work."</string>
    <string name="title_nav_prep">Instructions - Read Carefully</string>
    <string name="next">Next</string>
    <string name="title_nav_main">Navigate</string>
    <string name="getting_ready">Getting Ready…</string>
    <string name="progress">Progress:</string>
    <string name="exit_navigation">Exit Navigation</string>
    <string name="repeat_verbal_instructions">Repeat Verbal Instructions</string>
    <string name="view_instructions_as_text">View Instructions as Text</string>
    <string name="destination">Destination:</string>
    <string name="image_of_general_direction_to_move_in">Image of general direction to move in</string>
    <string name="finding_beacon">Finding the nearest beacon…</string>
    <string name="title_nav_post">Navigation Completed</string>
    <string name="nav_post_text_header">Welcome to the %s.</string>
    <string name="nav_post_text_body">Navigation has been completed successfully.
You can return to the main menu to navigate elsewhere, or view more information about this location.</string>
</resources>