<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gng2101groupb32.pathfindr.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_nav_list"
            app:destination="@id/navigation_nav_list" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_loc_list"
            app:destination="@id/navigation_loc_list" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_announcements"
            app:destination="@id/navigation_announcements" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_announcements"
        android:name="com.gng2101groupb32.pathfindr.ui.announcements.AnnouncementsListFragment"
        android:label="@string/title_announcements"
        tools:layout="@layout/fragment_announcement_list">
        <action
            android:id="@+id/action_navigation_announcements_to_announcementViewFragment"
            app:destination="@id/announcementViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_nav_list"
        android:name="com.gng2101groupb32.pathfindr.ui.navigate.NavigateDestinationListFragment"
        android:label="@string/title_navigate_list"
        tools:layout="@layout/fragment_navigate_destination_list">
        <action
            android:id="@+id/action_navigation_nav_list_to_locationViewFragment"
            app:destination="@id/locationViewFragment" />
        <action
            android:id="@+id/action_navigation_nav_list_to_navPrepFragment"
            app:destination="@id/navPrepFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_loc_list"
        android:name="com.gng2101groupb32.pathfindr.ui.location_info.LocationsListFragment"
        android:label="@string/title_location_info"
        tools:layout="@layout/fragment_locations_list">
        <action
            android:id="@+id/action_navigation_loc_list_to_locationViewFragment"
            app:destination="@id/locationViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.gng2101groupb32.pathfindr.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/announcementViewFragment"
        android:name="com.gng2101groupb32.pathfindr.ui.announcements.AnnouncementViewFragment"
        android:label="@string/title_ann_view" />
    <fragment
        android:id="@+id/locationViewFragment"
        android:name="com.gng2101groupb32.pathfindr.LocationViewFragment"
        android:label="@string/title_location_view" />
    <fragment
        android:id="@+id/navPrepFragment"
        android:name="com.gng2101groupb32.pathfindr.ui.navigate.NavPrepFragment"
        android:label="@string/title_nav_prep"
        tools:layout="@layout/fragment_nav_prep">
        <action
            android:id="@+id/action_navPrepFragment_to_navMainFragment"
            app:destination="@id/navMainFragment" />
    </fragment>
    <fragment
        android:id="@+id/navMainFragment"
        android:name="com.gng2101groupb32.pathfindr.ui.navigate.NavMainFragment"
        android:label="@string/title_nav_main"
        tools:layout="@layout/fragment_nav_main">
        <action
            android:id="@+id/action_navMainFragment_to_navigation_nav_list"
            app:popUpTo="@+id/navigation_nav_list"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_nav_list" />
        <action
            android:id="@+id/action_navMainFragment_to_navPostFragment"
            app:destination="@id/navPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/navPostFragment"
        android:name="com.gng2101groupb32.pathfindr.ui.navigate.NavPostFragment"
        android:label="@string/title_nav_post"
        tools:layout="@layout/fragment_nav_post" />
</navigation>